# lisboaporoutros

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  flake.nix  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
admin/: README.md  index.html  package.json  vite.config.ts
admin/src/: main.tsx  styles.css
alembic/: README
alembic/versions/: 20260416_000001_initial_schema.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: admin_auth.py  health.py  (+5 more)
app/core/: config.py  db.py  security.py
app/models/: __init__.py  entities.py  enums.py  sqltypes.py
app/schemas/: common.py
app/services/: audio_jobs.py  csv_import.py  elevenlabs.py  gemini.py  r2.py
backend/: .env.example  .gitignore  AGENTS.md  README.md  spec.md
backend/alembic/: env.py
backend/tests/: test_admin_automation.py  test_admin_content.py  test_admin_import.py  test_api_public.py  test_security.py
docs/: README.md  arquitetura.md  backend_referencia.md  importacao_csv_conteudo.md  infrastructure.md  lisboa_spec_geral.md
docs/templates/: content_import_template.csv
mobile/: .gitignore  App.tsx  README.md  app.json  package.json  styles.ts
shared/: README.md  package.json
shared/src/: index.ts
tests/: conftest.py  test_admin_import.py  test_api_auth.py  test_api_public.py  test_health.py  test_models.py
webapp/: .env  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
webapp/.storybook/: main.ts  preview.ts
webapp/public/: manifest.webmanifest  sw.js
webapp/src/: App.tsx  main.tsx  types.ts
(+43 files in other folders)
